data/derived/fa15/progs/unify/prog4119.ml.out
Characters 97-98:
  else mulByDigit (i-1) (bigAdd l l);;
                                ^
Error: This expression has type int but an expression was expected of type
         int list
